compiler/fir/analysis-tests/testData/resolve/extraCheckers/RedundantCallOfConversionMethod/nullable2.kt
// IS_APPLICABLE: false
// WITH_STDLIB
data class Foo(val name: String)

fun nullable2(foo: Foo?) {
    val <!UNUSED_VARIABLE!>s<!>: String = foo?.name.toString()
}
